# mypi

./: .codepi.acknowledgement  .gitignore  CLAUDE.md  Claude_skill_format.md  OPENSPEC-CORE-PROPOSAL.md  OPENSPEC-TEMPLATE-PROPOSAL.md  README.md  claude-prompts.md  openviking-context-management.md  opsx-propose.md  pi-coding-agent.md  pyproject.toml  rename-to-codepi.sh  research.md  template-system.md  test.md  testSDK.py
ai/: provider.py
codepi/: __init__.py  __main__.py  config.py  rename_to_codepi.sh
codepi/acp/: __init__.py  agent.py  content.py  session_adapter.py  tool_adapter.py
codepi/addons/: __init__.py  attribution.py
codepi/ai/: openai_compat.py  provider.py
codepi/core/: __init__.py  agent_session.py  commands.py  events.py  memory_dedup.py  memory_extractor.py  memory_store.py  recovery_manager.py  security.py  session_manager.py  subagent.py
codepi/extensions/: base.py  loader.py  memory_extension.py  skill_loader.py
codepi/modes/: interactive.py  print_mode.py  rpc.py  sdk.py
codepi/prompts/: __init__.py  composer.py
codepi/templates/: __init__.py  cli.py  registry.py
codepi/tools/: __init__.py  base.py  builtins.py  skill_tool.py
codepi/tui/: app.py  components.py  renderer.py  rich_components.py  rich_renderer.py
docs/: developer-guide.md  user-guide.md
mypi/: __init__.py  __main__.py  config.py
mypi/ai/: __init__.py  openai_compat.py  provider.py
mypi/core/: agent_session.py  events.py  recovery_manager.py  rich_renderer.py  session_manager.py
mypi/extensions/: __init__.py  base.py  loader.py  skill_loader.py
mypi/modes/: __init__.py  interactive.py  print_mode.py  rpc.py  sdk.py
mypi/templates/: __init__.py  adapters.py  cli.py  registry.py
mypi/tools/: base.py  builtins.py  skill_tool.py
mypi/tui/: __init__.py  app.py  components.py  renderer.py  rich_components.py  rich_renderer.py
openspec/: config.yaml
tests/: __init__.py  conftest.py
(+196 files in other folders)
