[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codepi"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "watchdog>=4.0",
    "pyyaml>=6.0",
    "lsp-client>=0.3.9",
    "agent-client-protocol>=0.1.0",
]

[project.scripts]
codepi = "codepi.__main__:main"

[tool.setuptools.packages.find]
include = ["codepi*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-mock>=3.0"]
web = ["ddgs>=9.0.0", "httpx>=0.27.0", "trafilatura>=2.0.0", "scrapling>=0.4.6"]
web-full = ["codepi[web]", "scrapling[fetchers]>=0.4.6"]
